--- a/devops-octane/.env
+++ b/devops-octane/.env
@@ -1,6 +1,6 @@
 AOS_TAG=1.1.2
-OCTANE_TAG=12.55.8.84_dis
-DEVOPS_TAG=${AOS_VERSION}.1
+OCTANE_TAG=12.55.7.84_dis
+DEVOPS_TAG=1.1.2.2
 MAIN_PORT=8000
 ACCOUNT_PORT=8001
 POSTGRES_PORT=5432
@@ -8,4 +8,5 @@ MAIN_IP=nimbusserver
 ACCOUNT_IP=nimbusserver
 POSTGRES_IP=aos_postgres
 PGPASSWORD=admin
+
 
