--- a/devops-octane/docker-compose.yml
+++ b/devops-octane/docker-compose.yml
@@ -19,6 +19,11 @@ services:
     restart: always
     networks:
         - demo-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 20s
+      timeout: 3s
+      retries: 5
   aos_accountservice:
     env_file:
     - .env
@@ -31,6 +36,11 @@ services:
     restart: always
     networks:
         - demo-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 20s
+      timeout: 3s
+      retries: 5
   aos_main:
     env_file:
     - .env
@@ -43,6 +53,10 @@ services:
     restart: always
     networks:
         - demo-net
+  test: ["CMD", "curl", "-f", "http://localhost:8080"]
+    interval: 20s
+    timeout: 3s
+    retries: 5
   devops:
     env_file:
       - .env
